feat[Event]: api thêm, sửa, xóa, chi tiết event
